--- a/src/app/hours/hours.component.scss
+++ b/src/app/hours/hours.component.scss
@@ -34,7 +34,7 @@
   border-bottom-right-radius: 8px;
 }
 .list-menu-item {
-  display: flex;
+  display:contents;
   flex-direction: column ;
   flex-grow: 1;
   background: pink;
