--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -21,6 +21,7 @@
     <div *ngFor="let award of awards">
       <h2>{{ award.title }}</h2>
       <p>{{ award.description }}</p>
+      <button (click)="deleteAward(award.id)">Delete</button>
       <!-- <div *ngFor="let imageUrl of award.images"> -->
         <img [src]="award.image_url"
         alt="Award Image"
